<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btn_unit_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/btn_unit_setting"
            android:layout_weight="1"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/btn_clear_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/btn_clear_log"
            android:layout_weight="1"
            android:background="@drawable/shape2"/>

        <Button
            android:id="@+id/btn_scan_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="3dp"
            android:text="@string/btn_scan_bt"
            android:layout_weight="1"
            android:background="@drawable/shape1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/main_connected_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_length_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_length_title"
        android:textSize="25sp"
        android:textColor="@color/blue"
        />

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_msg_log_title"
            android:textColor="@color/blue"
            android:layout_marginStart="7dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="486dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/msg_log_background">

            <TextView
                android:id="@+id/msg_log_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>